2007-10-12 [holger]	0.12.1cvs7

	* src/notification_plugin.c
		Destroy the trayicon on plugin unload. This call
		was for sure missing, but doesn't fix the problem
		that plugin unloading causes memory corruptions and
		crashes. More debugging is necessary on this.

2007-10-11 [colin]	0.12.1cvs6

	* src/notification_trayicon.c
		Use ngettext for plurals

2007-10-11 [holger]	0.12.1cvs5

	* configure.ac
	* src/notification_plugin.c
		Update required Claws-Mail version
	* src/notification_popup.c
	* src/notification_trayicon.c
		If a single mail arrived and there is a picture
		of the sender in the addressbook, use this picture
		in the libnotify popup instead of the Claws Mail logo.

2007-10-04 [colin]	0.12.1cvs4

	* src/notification_prefs.c
		Verify success on writes

2007-09-26 [holger]	0.12.1cvs3

	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_trayicon.c
	* src/notification_trayicon.h
		Fix compile without libnotify support.
		Thanks to Brian Morrison for reporting.

2007-09-26 [holger]	0.12.1cvs2

	* src/notification_core.c
	* src/notification_core.h
	* src/notification_lcdproc.c
	* src/notification_lcdproc.h
	* src/notification_plugin.c
	* src/notification_prefs.c
	* src/notification_trayicon.c
	* src/notification_trayicon.h
		Make trayicon and LCD obey global
		folder preferences. Also, add "selected
		folders only" option to the complete trayicon
		module (and not only to the popups)

2007-09-20 [paul]	0.12.1cvs1

	* configure.ac
	* po/it.po
		submitted by Andrea Spadaccini

2007-09-17 [paul]	0.12.1

	* 0.12.1 released

2007-09-07 [holger]	0.12cvs2

	* src/notification_popup.c
		Fix typo in English popup string. Thanks to
		Andrea Spadaccini for reporting.

2007-09-07 [holger]	0.12cvs1

	* src/notification_lcdproc.c
		Add missing include. Hopefully fixes build on FreeBSD.
		Thanks to Martin Wilke (miwi) for reporting.

2007-09-03 [paul]	0.12

	* 0.12 released

2007-09-03 [paul]	0.11cvs19

	* po/ca.po
	* po/fi.po
	* po/hu.po