@@ -76,3 +76,4 @@
 ( cvs diff -u -r 1.1.2.100 -r 1.1.2.101 configure.ac;  cvs diff -u -r 1.1.2.23 -r 1.1.2.24 src/notification_plugin.c;  cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/notification_popup.c;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/notification_trayicon.c;  ) > 0.12.1cvs5.patchset
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/notification_trayicon.c;  ) > 0.12.1cvs6.patchset
 ( cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/notification_plugin.c;  ) > 0.12.1cvs7.patchset
+( cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/notification_plugin.c;  ) > 0.12.1cvs8.patchset
